# OpenGlRenderingProjects

./: CMakeLists.txt
src/: README.txt  main.cpp
src/GUI/: RenderWindow.cpp  RenderWindow.h
src/RenderApplications/: IRenderApplication.h  TriangleRenderer.cpp  TriangleRenderer.h
src/Shader/: Shader.cpp  Shader.h
src/Shader/FragmentShaders/: TextureFragmentShader.frag
src/Shader/VertexShaders/: TextureVertexShader.vert
